--- a/css/style.css
+++ b/css/style.css
@@ -146,24 +146,77 @@ h3{
     text-align: center;
     line-height: 1.2;
 }
+
 /*graficos*/
 .grafico{
     min-height: 30rem;
+    background-repeat: no-repeat;
+    grid-column: 1/3;
+    background-size: cover;
 }
 .grafico--camisas {
     grid-row: 2/3;
-    grid-column: 1/3;
     background-image: url("../img/grafico1.jpg");
 }
 
 .grafico--node {
     grid-row: 6/7;
-    grid-column: 1/3;
-    background-image: url(../img/grafico2.jpg);
+    background-image: url("../img/grafico2.jpg");
 }
+
 @media (min-width: 768px) {
     .grafico--node {
         grid-row: 4/5;
         grid-column: 2/4;
     }
+}
+
+/*nosotros*/
+.nosotros{
+    display: grid;
+    grid-template-rows: repeat(2, auto);
+}
+@media (min-width: 768px) {
+    .nosotros{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+.nosotros__imagen{
+    grid-row: 1/2;
+    width: 100%;
+}
+@media (min-width: 768px) {
+    .nosotros__imagen{
+        grid-column: 2/3;
+    }
+}
+.nosotros__text{
+    padding: 0 1rem;
+}
+
+/*bloques*/
+
+.bloques{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 5rem;
+}
+@media (min-width:768px ) {
+    .bloques{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+.bloque{
+    text-align: center;
+}
+
+.bloque__imagen{
+    width: 100%;
+}
+
+.bloque__titulo{
+    margin: 0;
 }
