--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
     --primary: #3f60b5;
     --darkPrimary: #383d71;
     --secondary:#FFCE00;
-    --darkSecondary: rgba(221, 228, 3, 0.44);
+    --darkSecondary: rgba(194, 255, 71, 0.44);
     --blanco:#FFF;
     --negro:#000;
 
@@ -33,7 +33,7 @@ a{
     text-decoration: none;
 }
 img{
-    max-width: 100%;
+    width: 100%;
 }
 .contenedor{
     max-width: 120rem;
@@ -57,8 +57,7 @@ h1,h2,h3{
         grid-template-columns: repeat(3, 1fr);
     }
 
-}
-
+}  /*termina Globales*/
 
 /*Tipografia*/
 h1{
@@ -69,7 +68,7 @@ h2{
 }
 h3{
     font-size: 2.4rem;
-}
+} /*Termina la tipografia*/
 
 /*header*/
 .header{
@@ -78,7 +77,8 @@ h3{
 }
 .header__logo{
     margin: 3rem 0;
-}
+}/*Termina el header*/
+
 /*Footer*/
 .footer{
     background-color: var(--darkPrimary);
@@ -89,7 +89,7 @@ h3{
     text-align: center;
     font-family: var(--primaryFont),Helvetica, sans-serif;
     font-size: 2.2rem;
- }
+ }/*Termina el footer*/
 
 /*navegacion*/
 
@@ -114,7 +114,7 @@ h3{
 }
 .navegacion__enlace--avtivo{
     color: var(--secondary);
-}
+}/*Termina la navegacion*/
 
 /*Producto*/
 .producto{
@@ -126,7 +126,6 @@ h3{
     background: var(--darkSecondary);
 }
 .producto__imagen{
-    width: 100%;
     border-radius: 10%;
 }
 .producto__informacion{
@@ -145,7 +144,7 @@ h3{
     margin: 1rem 0;
     text-align: center;
     line-height: 1.2;
-}
+} /*termina producto*/
 
 /*graficos*/
 .grafico{
@@ -169,7 +168,7 @@ h3{
         grid-row: 4/5;
         grid-column: 2/4;
     }
-}
+}/*Termina grafico*/
 
 /*nosotros*/
 .nosotros{
@@ -186,7 +185,6 @@ h3{
 
 .nosotros__imagen{
     grid-row: 1/2;
-    width: 100%;
 }
 @media (min-width: 768px) {
     .nosotros__imagen{
@@ -195,7 +193,7 @@ h3{
 }
 .nosotros__text{
     padding: 0 1rem;
-}
+} /*termina nosotros*/
 
 /*bloques*/
 
@@ -212,11 +210,65 @@ h3{
 .bloque{
     text-align: center;
 }
-
-.bloque__imagen{
-    width: 100%;
-}
-
 .bloque__titulo{
     margin: 0;
+} /*termina bloque*/
+
+
+/*pagina del producto*/
+.camisa{
+    margin: 1rem;
 }
+@media (min-width: 768px) {
+    .camisa {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+.camisa__texto{
+    margin: 0 1rem ;
+}
+/* formaulario de la pagina de producto*/
+.formulario{
+    margin:1rem;
+}
+@media (min-width: 768px) {
+    .formulario{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 1rem;
+        row-gap: 1rem;
+    }
+}
+
+
+.formulario__campo{
+    margin: 1rem 0;
+    border: 1rem solid var(--darkPrimary);
+    background: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    font-family: Arial,Helvetica, sans-serif;
+    padding: 1rem;
+    appearance: none;
+    width: 100%;
+}
+.formulario__campo:hover{
+    color: var(--negro);
+}
+.formulario__submit {
+    background-color: var(--secondary);
+    border: none;
+    font-size: 2rem;
+    font-family: var(--primaryFont), Helvetica, sans-serif;
+    padding: 2rem;
+    transition: background-color 0.3s ease-in-out, font-size 0.3s ease-in-out;
+    width: 100%;
+    grid-column: 1/3;
+}
+.formulario__submit:hover{
+    cursor: pointer;
+    font-size: 2.8rem;
+    background-color: var(--darkSecondary);
+}/*termina la pagina del producto*/
